@@ -1,6 +1,8 @@
 AUX autoconf_fix.patch 3446 RMD160 05d9e737ff82d9c716e5b4dc6020266cfe8a536d SHA1 3cf81c5ee22af5109d6a68bb824e8e599d2dad08 SHA256 e73f69efa29d0fb54f8300aa1e726db284c3ed9eb114ba8b747ea568b1597ffa
 DIST hivex-1.2.3.tar.gz 1016671 RMD160 aaaf78bafc2201399f53dd6c2da6c18eee5e7760 SHA1 d60f19fe6ef0bed95e88ec5085b617138e733a66 SHA256 4386b5cddde34ae6ba053f47adc3bf487b7397c076686ece9740964351ee1956
+DIST hivex-1.2.4.tar.gz 1041299 RMD160 dae52f71683e01754d554d9cc2f89c9f954f3de7 SHA1 68f5d78f1ffa4408423841189ca4c3149d3c437a SHA256 b3431e3c26995a91e44c6381cc549dfb7d419adf2d56776c297b68ad33fc427a
 EBUILD hivex-1.2.3-r1.ebuild 1161 RMD160 b8c573a471a73189e1c7a57db56322462b739f43 SHA1 16e729be5edfcc80d74ee1de1ce89e91a22560bf SHA256 d53c34539a994ea12dc5e63c2aa3c07b462c0790521dfe06047fd3b55aa132ca
 EBUILD hivex-1.2.3-r2.ebuild 1162 RMD160 e0dce4c771bb756e3bc401c9333d951d093f9a78 SHA1 00d9e65668df3b8120e12383c3cd0295c7bab211 SHA256 0e9c9618652a0675fb3fb7658faa3f49b464c0d5ce90ace50ac507d6848d65b0
-MISC ChangeLog 781 RMD160 a5666464fe8e68e58886d0f4c5f7ea2dc8e1c8d6 SHA1 6b6ab74845ab3da7c02be936a533705e8bb5feee SHA256 a749d28200625a52445f5b7ef72211adee0333564047b453654ec20b0c29c91d
+EBUILD hivex-1.2.4.ebuild 1257 RMD160 1cfef301c3bb420b7d51edc216b11634c72200fc SHA1 e241cd9701aeb525f051a3e0677174ce62a763f3 SHA256 807008b70a349c2f212864dbec7a0ca3af66d30c7acc8cbbba80315519ed3f2e
+MISC ChangeLog 871 RMD160 faf6e1e7dcff01b74124feafa62f5956003e581c SHA1 0ba2cffc045f5b46be5d499897b1583c34a2f8f5 SHA256 522293bd44b767695ab98835aefa3f38b9f79e86db95ca095414a267d3d8a78d
 MISC metadata.xml 337 RMD160 cf9987167056e3b4b542d40e1c7a0cb64941cbb0 SHA1 b6a7140248d5d5c22676fd9229efaca83b48efc6 SHA256 95f0507617725b8f6953477b80b111e4c557fe070030a5b1daab17413d755d77
