@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*hivex-1.2.4 (23 Dec 2010)
+
+  23 Dec 2010; <slep@gentoo.org> +hivex-1.2.4.ebuild:
+  bump
+
   09 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> hivex-1.2.3-r1.ebuild,
   +hivex-1.2.3-r2.ebuild:
   fil localpod install
